@@ -331,6 +331,8 @@ typedef struct DecoderOpts {
 typedef struct Decoder {
     const AVClass   *class;
 
+    enum AVMediaType type;
+
     const uint8_t   *subtitle_header;
     int              subtitle_header_size;
 
@@ -606,6 +608,8 @@ typedef struct FrameData {
     int        bits_per_raw_sample;
 
     int64_t wallclock[LATENCY_PROBE_NB];
+
+    AVCodecParameters *par_enc;
 } FrameData;
 
 extern InputFile   **input_files;
@@ -616,6 +620,10 @@ extern int         nb_output_files;
 
 extern FilterGraph **filtergraphs;
 extern int        nb_filtergraphs;
+
+// standalone decoders (not tied to demuxed streams)
+extern Decoder     **decoders;
+extern int        nb_decoders;
 
 extern char *vstats_filename;
 
@@ -735,6 +743,11 @@ void hw_device_free_all(void);
 AVBufferRef *hw_device_for_filter(void);
 
 /**
+ * Create a standalone decoder.
+ */
+int dec_create(const OptionsContext *o, const char *arg, Scheduler *sch);
+
+/**
  * @param dec_opts Dictionary filled with decoder options. Its ownership
  *                 is transferred to the decoder.
  * @param param_out If non-NULL, media properties after opening the decoder
@@ -748,11 +761,20 @@ int dec_init(Decoder **pdec, Scheduler *sch,
              AVFrame *param_out);
 void dec_free(Decoder **pdec);
 
+/*
+ * Called by filters to connect decoder's output to given filtergraph input.
+ *
+ * @param opts filtergraph input options, to be filled by this function
+ */
+int dec_filter_add(Decoder *dec, InputFilter *ifilter, InputFilterOptions *opts);
+
 int enc_alloc(Encoder **penc, const AVCodec *codec,
               Scheduler *sch, unsigned sch_idx);
 void enc_free(Encoder **penc);
 
 int enc_open(void *opaque, const AVFrame *frame);
+
+int enc_loopback(Encoder *enc);
 
 /*
  * Initialize muxing state for the given stream, should be called
