@@ -33,6 +33,7 @@ version <next>:
 - ffprobe -show_stream_groups option
 - ffprobe (with -export_side_data film_grain) now prints film grain metadata
 - AEA muxer
+- ffmpeg CLI loopback decoders
 
 
 version 6.1:
